--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
-h1,h2,h3,h4,h5,h6,a{
-    font-family: 'Spartan', sans-serif;}
-p,span{
-    font-family: 'Roboto', sans-serif;
+h1,h2,h3,h4,h5,h6,a,p,span{
+    font-family: 'Spartan', sans-serif;
 }
 img{
     max-width: 100%;
@@ -164,12 +162,12 @@ img{
 }
 
 .slider_img img {
-    height: 650px;
-    width: auto;
+    height: 700px;
+    width: 700px;
     border-radius: 50%;
     position: absolute;
-    top: -85px;
-    right: -196px;
+    top: -137px;
+    right: -180px;
 }
 
 
@@ -325,27 +323,24 @@ section.our_tools{
     height: 80px;
     width: 80px;
     line-height: 86px;
+    /* padding: 30px 35px; */
     border-radius: 50%;
     background: #fff;
     position: absolute;
     right: 50%;
     bottom: 20%;
-    display: inline-block;
+    /* display: inline-block; */
     text-align: center;
     color: #265ef2;
     transition: all .4s;
 }
-.img_play_icon:hover{
-    color: #fff;
-    background: #265ef2;
-}
 .img_play_icon::before{
     content: "";
     position: absolute;
-    height: 80px;
-    width: 80px;
+    height: 85px;
+    width: 85px;
     border-radius: 50%;
-    animation: playbtn 1.6s ease-out infinite;
+    animation: playbtn 1.9s ease-out infinite;
     top: 0;
     left: 0;
     border: 1px solid #fff;
@@ -353,35 +348,47 @@ section.our_tools{
 .img_play_icon::after{
     content: "";
     position: absolute;
-    height: 80px;
-    width: 80px;
+    height: 75px;
+    width: 75px;
     border-radius: 50%;
-    animation: playbtn2 1.3s ease-out infinite;
-    top: 0;
-    left: 0;
+    animation: playbtn2 2s ease-out infinite;
+    top: 4px;
+    left: 5px;
     border: 1px solid #fff;
+    margin: auto;
+
 }
+
 @keyframes playbtn2{
-    0%,30%{
-        transform: scale(1);
+    0%{
+        transform: scale(0);
         opacity: 1;
         
+    }
+    25%{
+        transform: scale(.8);
+        opacity: .5;
     }
 
     50%{
-        transform: scale(1.2);
-        opacity: .4;
+        transform: scale(1.5);
+        opacity: .8;
     } 
     100%{
-        transform: scale(1.5);
+        transform: scale(2);
         opacity: 0;
     }
 }
+
 @keyframes playbtn{
-    0%,30%{
-        transform: scale(1);
+    0%{
+        transform: scale(0);
         opacity: 1;
         
+    }
+    25%{
+        transform: scale(.7);
+        opacity: .4;
     }
 
     50%{
